# aimotive-assignment

./: CMakeLists.txt  README.md
src/: main.cpp  map.cpp  map.h
src/fields/: empty_field.cpp  empty_field.h  field.cpp  field.h  starting_field.cpp  starting_field.h  target_field.cpp  target_field.h  wall_field.cpp  wall_field.h
